<resources>
    <string name="app_name">EyeConnect</string>
    <string name="title_activity_lost_items">LostItems</string>
    <string name="title_lost">Lost</string>
    <string name="title_found">Found</string>
    <string name="title_help">Help</string>

    <string name="OpenDrawer">Open Drawer</string>
    <string name="CloseDrawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_image">Upload Image</string>
    <string name="submit">Submit</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="person_name">Person name</string>
    <string name="add_details_of_your_lost_item">Add details of your lost item</string>
    <string name="location_at_where_you_lost_it">Location at where you lost it!</string>
</resources>